...
    <string name="date_hint">MM/YY</string>
    <string name="cvv_hint">CVV</string>
    <string name="card_number_hint">Card number</string>
    <string name="card_holder_hint">Cardholder Name</string>
    <string name="country_hint">Country</string>
    <string name="post_code_hint">Postcode</string>
    <string name="check_card_number">Check card number</string>
    <string name="error_maestro_not_supported">We don\'t accept Maestro, please use other cards</string>
    <string name="error_amex_not_supported">We don\'t accept AmEx, please use other cards</string>
    <string name="error_discover_not_supported">We don\'t accept Discover, please use other cards</string>
    <string name="error_union_pay_not_supported">We don\'t accept Union Pay, please use other cards</string>
    <string name="error_jcb_not_supported">We don\'t accept JCB, please use other cards</string>
    <string name="check_expiry_date">Check expiry date</string>
    <string name="check_cvv">Check CVV</string>
    <string name="card_subtitle">%1$s Ending</string>
    <string name="expired">Expired</string>
    <string name="is_expired">is Expired</string>
    <string name="will_expire_soon">will expire soon</string>
    <string name="expire_soon">expire soon</string>
...
