<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/card_entry_height">

    <Button
        android:id="@+id/entryButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/button_background"
        android:text="@string/pay"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Add card" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/width_24"
        android:layout_height="@dimen/height_24"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/entryButton"
        app:layout_constraintEnd_toEndOf="@id/entryButton"
        app:layout_constraintStart_toStartOf="@id/entryButton"
        app:layout_constraintTop_toTopOf="@id/entryButton" />
</androidx.constraintlayout.widget.ConstraintLayout>