...
        android:id="@+id/securityCodeError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_6"
        android:textColor="@color/error"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintBottom_toTopOf="@+id/securityCodeEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/security_code" />

    <com.judopay.view.JudoEditText
        android:id="@+id/securityCodeEditText"
...
